--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,4 +4,8 @@ html, body{
 	margin: 0;
 	padding: 0;
 	overflow: hidden;
+	background: #eee;
+	color: #222;
+	line-height: 1.3;
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
