--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 @import "users.css";
+@import "fonts.css";
 
 html, body{
 	width: 100%;
@@ -9,5 +10,38 @@ html, body{
 	background: #eee;
 	color: #222;
 	line-height: 1.3;
-	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	font-family: 'PT Sans', sans-serif;
 }
+
+.container{
+	display: flex;
+	align-items: stretch;
+	width: 100%;
+	height: 100vh;
+	background: mediumseagreen;
+}
+
+.login_area{
+	flex: 3;
+	display: flex;	
+}
+
+.info_bar{
+	flex: 1;
+	max-width: 400px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	box-sizing: border-box;
+	padding: 10px;
+	color: white;
+	background: rgba(27, 27, 27, 0.7);
+	/* background: burlywood;
+	background: linear-gradient(0deg, cyan, red); */
+}
+
+.clock_box{
+	text-align: center;
+	font-weight: bold;
+}
+
