--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
-@import "users.css";
 @import "fonts.css";
+@import "users.css";
+@import "clock.css";
 
 html, body{
 	width: 100%;
@@ -13,12 +14,16 @@ html, body{
 	font-family: 'PT Sans', sans-serif;
 }
 
+body{
+	background: url("../media/default_bg.png");
+    background-size: cover;
+}
+
 .container{
 	display: flex;
 	align-items: stretch;
 	width: 100%;
 	height: 100vh;
-	background: mediumseagreen;
 }
 
 .login_area{
@@ -34,14 +39,8 @@ html, body{
 	align-items: center;
 	box-sizing: border-box;
 	padding: 10px;
-	color: white;
-	background: rgba(27, 27, 27, 0.7);
+	color: white;    
+	background: rgba(0, 0, 0, 0.62);
 	/* background: burlywood;
 	background: linear-gradient(0deg, cyan, red); */
 }
-
-.clock_box{
-	text-align: center;
-	font-weight: bold;
-}
-
