--- a/assets/css/users.css
+++ b/assets/css/users.css
@@ -3,30 +3,40 @@
 }
 
 .user_item{
-	display: inline-block;
-	background: #333;
 	color: #eee;
-	width: 250px;
-	min-height: 200px;
-	margin: 5px;
+	margin: 5px 40px;
+	padding: 5px;
+	font-size: 1em;
+    text-shadow: 0px 0px 20px black;
 }
+
+/*
 .user_item > .user_image{
 	width: 250px;
 	height: auto;
 	min-height: 250px;
 	border-bottom: 1px solid rgb(73, 73, 73);
 }
+*/
 
 .user_nice_name{
-	font-size: 1.7em;
-	font-weight: 600;
-}
-
-.user_nice_name, .user_name, .user_info{
-	padding: 1px 5px;
+	font-size: 2em;
+	margin-bottom: 3px;
 }
 
 .user_info{
-	color: rgb(165, 165, 165);
-	padding-bottom: 5px;
+	font-size: 1em;
+	color: rgba(255, 255, 255, 0.65);
+    margin-bottom: -2px;
+}
+
+input.user_password{
+    border-radius: 3px;
+    border: none;
+    font-size: 2.1em;
+	background: rgba(255, 255, 255, 0.53);
+	color: #eee;
+	padding: 5px;
+	outline: none !important;
+    /* box-shadow: 0px 0px 20px 1px black; */
 }
