--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,7 @@ html, body{
 	color: #222;
 	line-height: 1.3;
 	font-family: 'PT Sans', sans-serif;
+    text-rendering: geometricPrecision;
 }
 
 body{
