--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,9 @@
 @import "fonts.css";
 @import "users.css";
 @import "clock.css";
+@import "background.css";
+@import "layout.css";
+@import "effects.css";
 
 html, body{
 	width: 100%;
@@ -8,42 +11,8 @@ html, body{
 	margin: 0;
 	padding: 0;
 	overflow: hidden;
-	background: #eee;
 	color: #222;
 	line-height: 1.3;
 	font-family: 'PT Sans', sans-serif;
     text-rendering: geometricPrecision;
-}
-
-body{
-	background: url("../media/default_bg.png");
-    background-size: cover;
-}
-
-.container{
-	display: flex;
-	align-items: stretch;
-	width: 100%;
-	height: 100vh;
-}
-
-.login_area{
-	flex: 3;
-	display: flex;	
-    flex-direction: column;
-    justify-content: center;
-}
-
-.info_bar{
-	flex: 1;
-	max-width: 400px;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	box-sizing: border-box;
-	padding: 10px;
-	color: white;    
-	background: rgba(0, 0, 0, 0.62);
-	/* background: burlywood;
-	background: linear-gradient(0deg, cyan, red); */
 }
