--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -3,6 +3,9 @@
 	align-items: stretch;
 	width: 100%;
 	height: 100vh;
+	filter: blur(0px);
+	transition: 0.5s filter ease;
+	-webkit-transition: 0.5s -webkit-filter ease;
 }
 
 .login_area{
