--- a/assets/css/users.css
+++ b/assets/css/users.css
@@ -45,6 +45,7 @@ input.user_password, input.user_name{
 	max-height: 100px;
 	transition: 0.2s all;
 	margin-bottom: 5px;
+	transition: 0.3s background-color ease;
     /* box-shadow: 0px 0px 20px 1px black; */
 }
 
