--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -40,12 +40,13 @@
 }
 
 .power_button{
-	height: 2em;
+	height: 2.5em;
 	margin: 10px;
 	cursor: pointer;
     filter: brightness(75%);
 	transition: 0.2s filter ease;
 	-webkit-transition: 0.2s -webkit-filter ease;
+	fill: white;
 }
 
 .power_button:hover{
