Added feature of modals and overlay. Assigned settings button with demo modal.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
 @import "users.css";
 @import "clock.css";
 @import "background.css";
+@import "overlay.css";
 @import "layout.css";
 @import "weather.css";
 @import "effects.css";
