--- a/assets/css/weather.css
+++ b/assets/css/weather.css
@@ -14,9 +14,13 @@
     border-right: 1px solid rgba(255, 255, 255, 0.397);
 }
 
-.weather_item:first-of-type{
+.weather_item_today{
 	font-weight: bold;
 	color: rgba(255, 255, 255, 0.911);
+}
+
+.weather_item_yesterday{
+	color: rgba(255, 255, 255, 0.285);
 }
 
 .weather_temp{
