--- a/assets/css/themes/simple/style.css
+++ b/assets/css/themes/simple/style.css
@@ -18,5 +18,12 @@ html, body{
 	color: #222;
 	line-height: 1.3;
 	font-family: 'PT Sans', sans-serif;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-rendering: geometricPrecision;
 }
+
+section.hostname {
+	display: none;
+}
+
+.container::before { content: unset; }
